# personalization-experiment

./: README.md  mkdocs.yml  pyproject.toml
docs/: dataset.md  index.md  tests.md
personalization_experiment/: __init__.py  dataset.py
tests/: test_dataset_module.py  test_import_modules.py
