[tool.poetry]
name = "personalization-experiment"
version = "0.1.0"
description = ""
authors = ["bernardo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
